[Harmony Cast Dialog] Show domain as the status text for Hangout sinks

For Hangout sinks in the AVAILABLE state, show its domain as the status
text in the sink list.
Screenshot:
https://drive.google.com/open?id=1pOk8gsxW5MH8sUFJeg1WMLFanMtclPKv

Bug: 891087
Change-Id: I7faf94e4d89a03da8487264aae2aa73e95debb7c
Reviewed-on: https://chromium-review.googlesource.com/1258245
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Reviewed-by: mark a. foltz <mfoltz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596307}
Former-commit-id: 931b6ae754be7eb495ecdbaf0a480c4368823894